Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18945

corrupted ldlm flags on enqueue may lead to a crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      2021-10-11 03:07:49 [17394297.699497] Kernel panic - not syncing: LBUG
      2021-10-11 03:07:49 [17394297.704922] CPU: 22 PID: 120208 Comm: mdt05_007 Kdump: loaded Tainted: G W OE ------------ 3.10.0-957.1.3957.1.3.x4.3.25.x86_64 #1
      2021-10-11 03:07:49 [17394297.719653] Hardware name: Viking Enterprise Solutions VSSEP1EA/VSSEP1EA, BIOS 10.06 05/26/2020
      2021-10-11 03:07:49 [17394297.729506] Call Trace:
      2021-10-11 03:07:49 [17394297.733110] [<ffffffff8b964e41>] dump_stack+0x19/0x1b
      2021-10-11 03:07:49 [17394297.739376] [<ffffffff8b95e550>] panic+0xe8/0x21f
      2021-10-11 03:07:49 [17394297.745281] [<ffffffffc0b4e8fb>] lbug_with_loc+0x9b/0xa0 [libcfs]
      2021-10-11 03:07:49 [17394297.752590] [<ffffffffc100bcac>] __req_capsule_get+0x63c/0x740 [ptlrpc]
      2021-10-11 03:07:49 [17394297.760413] [<ffffffffc0f953d0>] ? ldlm_lock_enqueue+0x280/0xae0 [ptlrpc]
      2021-10-11 03:07:49 [17394297.768398] [<ffffffffc0fb5e62>] ? ldlm_export_lock_get+0x12/0x20 [ptlrpc]
      2021-10-11 03:07:49 [17394297.776456] [<ffffffffc100be08>] req_capsule_server_get+0x18/0x20 [ptlrpc]
      2021-10-11 03:07:49 [17394297.784496] [<ffffffffc0fbde13>] ldlm_handle_enqueue0+0xdb3/0x1630 [ptlrpc]
      2021-10-11 03:07:49 [17394297.792619] [<ffffffffc0fe76f0>] ? lustre_swab_ldlm_lock_desc+0x30/0x30 [ptlrpc]
      2021-10-11 03:07:49 [17394297.801172] [<ffffffffc1048032>] tgt_enqueue+0x62/0x210 [ptlrpc]
      2021-10-11 03:07:49 [17394297.808315] [<ffffffffc104d10a>] tgt_request_handle+0x96a/0x1680 [ptlrpc]
      2021-10-11 03:07:49 [17394297.816231] [<ffffffffc1028081>] ? ptlrpc_nrs_req_get_nolock0+0xd1/0x170 [ptlrpc]
      2021-10-11 03:07:49 [17394297.824807] [<ffffffffc0b4ec0e>] ? ktime_get_real_seconds+0xe/0x10 [libcfs]
      2021-10-11 03:07:49 [17394297.832881] [<ffffffffc0ff2886>] ptlrpc_server_handle_request+0x256/0xb10 [ptlrpc]
      2021-10-11 03:07:49 [17394297.841545] [<ffffffffc0feed61>] ? ptlrpc_wait_event+0xd1/0x3a0 [ptlrpc]
      2021-10-11 03:07:49 [17394297.849307] [<ffffffff8b2d6b22>] ? default_wake_function+0x12/0x20
      2021-10-11 03:07:49 [17394297.856526] [<ffffffff8b2cbdeb>] ? __wake_up_common+0x5b/0x90
      2021-10-11 03:07:49 [17394297.863319] [<ffffffffc0ff655a>] ptlrpc_main+0xcca/0x1ca0 [ptlrpc]
      2021-10-11 03:07:49 [17394297.870532] [<ffffffffc0ff5890>] ? ptlrpc_register_service+0x1010/0x1010 [ptlrpc]
      2021-10-11 03:07:49 [17394297.879007] [<ffffffff8b2c1f81>] kthread+0xd1/0xe0
      2021-10-11 03:07:49 [17394297.884780] [<ffffffff8b2c1eb0>] ? insert_kthread_work+0x40/0x40
      2021-10-11 03:07:49 [17394297.891759] [<ffffffff8b977c1d>] ret_from_fork_nospec_begin+0x7/0x21
      2021-10-11 03:07:49 [17394297.899069] [<ffffffff8b2c1eb0>] ? insert_kthread_work+0x40/0x40
      

      Attachments

        Activity

          People

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: