lustre/ldlm/ldlm_lockd.c
@@ -1272,6 +1272,12 @@ int ldlm_handle_enqueue(struct ldlm_namespace *ns,
 
 	flags = ldlm_flags_from_wire(dlm_req->lock_flags);
 
+	if (flags & ~LDLM_FL_WIRE_REQ_FLAGS_MASK) {
+		DEBUG_REQ(D_ERROR, req, "invalid lock request flags %llx",
+			  flags & ~LDLM_FL_WIRE_REQ_FLAGS_MASK);
+		GOTO(out, rc = -EPROTO);
+	}
+
 	/* for intent enqueue the stat will be updated inside intent policy */
 	if (ptlrpc_req2svc(req)->srv_stats != NULL &&
 	    !(dlm_req->lock_flags & LDLM_FL_HAS_INTENT))
@@ -2413,6 +2419,14 @@ static int ldlm_callback_handler(struct ptlrpc_request *req)
 		rc = ldlm_callback_reply(req, -EPROTO);
 		ldlm_callback_errmsg(req, "Operate without parameter", rc,
 				     NULL);
+		RETURN(0);
+	}
+
+	if (dlm_req->lock_flags & ~LDLM_FL_WIRE_AST_FLAGS_MASK) {
+		rc = ldlm_callback_reply(req, -EPROTO);
+		ldlm_callback_errmsg(req, "invalid lock request flags",
+				     dlm_req->lock_flags &
+				     ~LDLM_FL_WIRE_AST_FLAGS_MASK, NULL);
 		RETURN(0);
 	}
 
